# gameoflife

./: CMakeLists.txt
Input/: life.data.3
OutPat1D/: final.data-16.500.500.500.out  final.data-32.500.500.500.out  final.data-8.500.500.500.out
OutPat2D/: final.data-16.500.500.500.out  final.data-4.500.500.500.out
OutSeq/: final.data-seq.500.500.500.out
Report/: GameOfLife.aux  GameOfLife.out  GameOfLife.tex  IEEE Conference Format.tex  plots.m
include/: board.cpp  partition1D.cpp  partition2D.cpp
outputs/: compare_output.sh  temp1.out  temp2.out
outputs/1d/: life_1d.final.out.16.500.500.500  life_1d.final.out.2.500.500.500  life_1d.final.out.32.500.500.500  life_1d.final.out.4.500.500.500  life_1d.final.out.8.500.500.500
outputs/2d/: life_2d.final.out.1.500.500.500  life_2d.final.out.16.500.500.500  life_2d.final.out.2.500.500.500  life_2d.final.out.32.500.500.500  life_2d.final.out.4.500.500.500  life_2d.final.out.8.500.500.500
outputs/seq/: life_seq.data1.out.1.100.250.250  life_seq.data2.out.1.100.250.250  life_seq.final.out.1.500.500.500
outputs/seq_opt/: life_seq_opt.final.out.1.500.500.500
outputs/truth/: final.gold.out
src/: life_mpi_1d.cpp  life_mpi_2d.cpp  life_seq.cpp  life_seq_opt.cpp
